--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Hello Food</string>
+    <string name="login_shared_preference">com.rajenda.foodapp_shared_preference</string>
+    <string name="login_status_shared_preference">com.rajenda.foodapp_login_shared_preference</string>
+    <string name="username">marius</string>
+    <string name="password">marius</string>
 </resources>
